--- a/index.html
+++ b/index.html
@@ -49,6 +49,26 @@
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
+    <nav class="navbar navbar-default">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html">Bahareh Zahirodini</a>
+            </div>
+            <div class="collapse navbar-collapse" id="navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="publications.html">Publications</a></li>
+                    <li><a href="experience.html">Experience</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="container" id="main">
         <div class="row">
             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
@@ -62,9 +82,9 @@
                                 I am a data scientist and researcher with a Master’s in Business Analytics from Bentley University. My work focuses on Bayesian networks, sentiment analysis, and data visualization, exploring consumer preferences and societal trends.
                             </p>
                             <p style="text-align:center">
-                                <a href="mailto:zahirodiny@gmail.com">Email</a> &nbsp;/&nbsp;
-                                <a href="https://linkedin.com/in/bahareh-zahirodini/">LinkedIn</a> &nbsp;/&nbsp;
-                                <a href="data/BaharehZahirodini-CV.pdf">CV</a> &nbsp;/&nbsp;
+                                <a href="mailto:zahirodiny@gmail.com">Email</a>  / 
+                                <a href="https://linkedin.com/in/bahareh-zahirodini/">LinkedIn</a>  / 
+                                <a href="data/BaharehZahirodini-CV.pdf">CV</a>  / 
                                 <a href="https://github.com/baharehzahirodini">GitHub</a>
                             </p>
                         </td>
