--- a/publications.html
+++ b/publications.html
@@ -49,6 +49,26 @@
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
+    <nav class="navbar navbar-default">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html">Bahareh Zahirodini</a>
+            </div>
+            <div class="collapse navbar-collapse" id="navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="index.html">Home</a></li>
+                    <li class="active"><a href="publications.html">Publications</a></li>
+                    <li><a href="experience.html">Experience</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="container" id="main">
         <div class="row">
             <div class="col-md-12">
@@ -106,7 +126,7 @@
                     </tbody>
                 </table>
                 <h2>Visualizations</h2>
-                <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left U.S.-Mexico border: functional alignment, summaries, and structural breaksuto;margin-left:auto;">
+                <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
                     <tbody>
                         <tr>
                             <td style="padding:8px;width:20%;vertical-align:middle">
