Added navigation bar to all pages

--- a/publications.html
+++ b/publications.html
@@ -144,10 +144,10 @@
                                 <img src="images/pyramids.jpg" width="160">
                             </td>
                             <td style="padding:8px;width:80%;vertical-align:middle">
-                                <a href="#"><span class="papertitle">Pyramids of Priorities and a Poisoned Omen</span></a><br>
+                                <a href="#"><span class="papertitle">Pyramids of Priorities and a Poisoned Omen: Differing Hierarchies of Desired Business Ethics</span></a><br>
                                 Bahareh Zahirodini<br>
                                 <em>Nightingale, Data Visualization Society</em><br>
-                                <a href="#">visualization</a>
+                                <a href="#">visualization</https://nightingaledvs.com/pyramids-of-priorities/>
                             </td>
                         </tr>
                     </tbody>
