--- a/publications.html
+++ b/publications.html
@@ -134,9 +134,9 @@
                             </td>
                             <td style="padding:8px;width:80%;vertical-align:middle">
                                 <a href="#"><span class="papertitle">The Stuff We Cannot Sweep Under a Torn Carpet</span></a><br>
-                                Bahareh Zahirodini<br>
+                                Bahareh Zahirodini, Moinak Bhaduri<br>
                                 <em>Nightingale, Data Visualization Society</em><br>
-                                <a href="#">visualization</a>
+                                <a href="#">visualization</https://nightingaledvs.com/the-stuff-we-cannot-sweep/>
                             </td>
                         </tr>
                         <tr>
@@ -145,7 +145,7 @@
                             </td>
                             <td style="padding:8px;width:80%;vertical-align:middle">
                                 <a href="#"><span class="papertitle">Pyramids of Priorities and a Poisoned Omen: Differing Hierarchies of Desired Business Ethics</span></a><br>
-                                Bahareh Zahirodini<br>
+                                Bahareh Zahirodini, Moinak Bhaduri<br>
                                 <em>Nightingale, Data Visualization Society</em><br>
                                 <a href="#">visualization</https://nightingaledvs.com/pyramids-of-priorities/>
                             </td>
