--- a/publications.html
+++ b/publications.html
@@ -81,7 +81,7 @@
                             </td>
                             <td style="padding:8px;width:80%;vertical-align:middle">
                                 <a href="#"><span class="papertitle">Bayesian Analysis of America's Business Attitudes</span></a><br>
-                                Bahareh Zahirodini<br>
+                                Bahareh Zahirodini, Moinak Bhaduri<br>
                                 <em>Chance (ASA)</em>, Accepted<br>
                                 Investigated business sentiment patterns and socioeconomic influences.<br>
                                 <a href="#">paper</a>
@@ -93,7 +93,7 @@
                             </td>
                             <td style="padding:8px;width:80%;vertical-align:middle">
                                 <a href="#"><span class="papertitle">Are all bets off when it comes to agreement gambles?</span></a><br>
-                                Bahareh Zahirodini<br>
+                                Bahareh Zahirodini, Moinak Bhaduri<br>
                                 <em>Significance (RSS)</em>, Under review<br>
                                 Analyzed decision-making under uncertainty using probabilistic models.<br>
                                 <a href="#">paper</a>
@@ -105,7 +105,7 @@
                             </td>
                             <td style="padding:8px;width:80%;vertical-align:middle">
                                 <a href="#"><span class="papertitle">Does age correlate with one's ungauged opinion on modern business practices?</span></a><br>
-                                Bahareh Zahirodini<br>
+                                Bahareh Zahirodini, Moinak Bhaduri<br>
                                 <em>Significance (RSS)</em>, Under review<br>
                                 Applied Rasch model to uncover generational divides.<br>
                                 <a href="#">paper</a>
@@ -117,7 +117,7 @@
                             </td>
                             <td style="padding:8px;width:80%;vertical-align:middle">
                                 <a href="#"><span class="papertitle">Shape of emotions from a community-based learning experience</span></a><br>
-                                Bahareh Zahirodini<br>
+                                Bahareh Zahirodini, Moinak Bhaduri<br>
                                 <em>Chance (ASA)</em>, Under review<br>
                                 Applied sentiment analysis and clustering to essays.<br>
                                 <a href="#">paper</a>
@@ -133,10 +133,10 @@
                                 <img src="images/torn_carpet.jpg" width="160">
                             </td>
                             <td style="padding:8px;width:80%;vertical-align:middle">
-                                <a href="#"><span class="papertitle">The Stuff We Cannot Sweep Under a Torn Carpet</span></a><br>
+                                <a href="https://nightingaledvs.com/the-stuff-we-cannot-sweep"><span class="papertitle">The Stuff We Cannot Sweep Under a Torn Carpet: : Perfectly Imperfect Tessellations From Slices of Maslows\' Triangle</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri<br>
                                 <em>Nightingale, Data Visualization Society</em><br>
-                                <a href="#">visualization</https://nightingaledvs.com/the-stuff-we-cannot-sweep/>
+                                <a href="#">visualization</a>
                             </td>
                         </tr>
                         <tr>
@@ -144,10 +144,10 @@
                                 <img src="images/pyramids.jpg" width="160">
                             </td>
                             <td style="padding:8px;width:80%;vertical-align:middle">
-                                <a href="#"><span class="papertitle">Pyramids of Priorities and a Poisoned Omen: Differing Hierarchies of Desired Business Ethics</span></a><br>
+                                <a href="https://nightingaledvs.com/pyramids-of-priorities/"><span class="papertitle">Pyramids of Priorities and a Poisoned Omen: Differing Hierarchies of Desired Business Ethics</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri<br>
                                 <em>Nightingale, Data Visualization Society</em><br>
-                                <a href="#">visualization</https://nightingaledvs.com/pyramids-of-priorities/>
+                                <a href="#">visualization</a>
                             </td>
                         </tr>
                     </tbody>
