Your commit message

--- a/publications.html
+++ b/publications.html
@@ -77,13 +77,13 @@
                     <tbody>
                         <tr>
                             <td style="padding:8px;width:20%;vertical-align:middle">
-                                <img src="images/bayesian_analysis.jpg" width="160">
+                                <img src="images/bayesian_analysis.jpeg" width="160">
                             </td>
                             <td style="padding:8px;width:80%;vertical-align:middle">
-                                <a href="#"><span class="papertitle">Bayesian Analysis of America's Business Attitudes</span></a><br>
+                                <a href="#"><span class="papertitle">Marking contemporary America's attitudinal stance towards modern businesses: a Bayesian attempt to detect deviation patterns based on demographics and politics</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri<br>
-                                <em>Chance (ASA)</em>, Accepted<br>
-                                Investigated business sentiment patterns and socioeconomic influences.<br>
+                                <em>Chance (American Statistical Association)</em>, Accepted<br>
+                                Bayesian Analysis of America's Business Attitudes<br>
                                 <a href="#">paper</a>
                             </td>
                         </tr>
