Your commit message

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                 <a href="mailto:zahirodiny@gmail.com">Email</a>  / 
                                 <a href="https://linkedin.com/in/bahareh-zahirodini/">LinkedIn</a>  / 
                                 <a href="data/BaharehZahirodini-CV.pdf">CV</a>  / 
-                                <a href="https://github.com/baharehzahirodini">GitHub</a>
+                                <a href="https://github.com/baharez/">GitHub</a>
                             </p>
                         </td>
                         <td style="padding:2.5%;width:37%;max-width:37%">
