--- a/publications.html
+++ b/publications.html
@@ -77,7 +77,7 @@
                     <tbody>
                         <tr>
                             <td style="padding:8px;width:20%;vertical-align:middle">
-                                <img src="images/bayesian_analysis.jpeg" width="160">
+                                <img src="images/bayesian_analysis.jpg" width="160">
                             </td>
                             <td style="padding:8px;width:80%;vertical-align:middle">
                                 <a href="#"><span class="papertitle">Marking contemporary America's attitudinal stance towards modern businesses: a Bayesian attempt to detect deviation patterns based on demographics and politics</span></a><br>
@@ -133,7 +133,7 @@
                                 <img src="images/torn_carpet.jpg" width="160">
                             </td>
                             <td style="padding:8px;width:80%;vertical-align:middle">
-                                <a href="https://nightingaledvs.com/the-stuff-we-cannot-sweep"><span class="papertitle">The Stuff We Cannot Sweep Under a Torn Carpet: : Perfectly Imperfect Tessellations From Slices of Maslows\' Triangle</span></a><br>
+                                <a href="https://nightingaledvs.com/the-stuff-we-cannot-sweep"><span class="papertitle">The Stuff We Cannot Sweep Under a Torn Carpet: : Perfectly Imperfect Tessellations From Slices of Maslows' Triangle</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri<br>
                                 <em>Nightingale, Data Visualization Society</em><br>
                                 <a href="#">visualization</a>
