--- a/index.html
+++ b/index.html
@@ -40,105 +40,33 @@
         </script><!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bahareh Zahirodini</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📊</text></svg>">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/app.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bahareh Zahirodini</title>
+  <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-    <nav class="navbar navbar-default">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html">Bahareh Zahirodini</a>
-            </div>
-            <div class="collapse navbar-collapse" id="navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="publications.html">Publications</a></li>
-                    <li><a href="experience.html">Experience</a></li>
-                </ul>
-            </div>
-        </div>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="publications.html">Publications</a></li>
+        <li><a href="experience.html">Experience</a></li>
+        <li><a href="dashboards.html">Dashboards</a></li>
+      </ul>
     </nav>
-    <div class="container" id="main">
-        <div class="row">
-            <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-                <tbody>
-                    <tr>
-                        <td style="padding:2.5%;width:63%;vertical-align:middle">
-                            <p style="text-align:center">
-                                <name>Bahareh Zahirodini</name>
-                            </p>
-                            <p>
-                                I am a data scientist and researcher with a Master’s in Business Analytics from Bentley University. My work focuses on Bayesian networks, sentiment analysis, and data visualization, exploring consumer preferences and societal trends.
-                            </p>
-                            <p style="text-align:center">
-                                <a href="mailto:zahirodiny@gmail.com">Email</a>  / 
-                                <a href="https://linkedin.com/in/bahareh-zahirodini/">LinkedIn</a>  / 
-                                <a href="data/BaharehZahirodini-CV.pdf">CV</a>  / 
-                                <a href="https://github.com/baharez/">GitHub</a>
-                            </p>
-                        </td>
-                        <td style="padding:2.5%;width:37%;max-width:37%">
-                            <img style="width:100%;max-width:100%;object-fit:cover;border-radius:50%;" alt="profile photo" src="images/profile.jpg" class="hoverZoomLink">
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <h2>News</h2>
-                <ul>
-                    <li><b>May 2024</b>: Graduated with M.S. in Business Analytics from Bentley University (GPA: 3.94).</li>
-                    <li><b>Apr 2024</b>: Publication accepted in <i>Chance (ASA)</i>: "Bayesian Analysis of America's Business Attitudes."</li>
-                    <li><b>Mar 2024</b>: Submitted papers to <i>Significance (RSS)</i> on decision-making and Rasch models.</li>
-                    <li><b>Feb 2024</b>: Won 2nd place in NABA x Bentley Business Bowl for Responsible AI case study.</li>
-                </ul>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <h2>Selected Projects</h2>
-                <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-                    <tbody>
-                        <tr>
-                            <td style="padding:8px;width:20%;vertical-align:middle">
-                                <img src="images/consumer_preferences.jpg" width="160">
-                            </td>
-                            <td style="padding:8px;width:80%;vertical-align:middle">
-                                <a href="#"><span class="papertitle">Exploring Consumer Preferences</span></a><br>
-                                Bentley-Gallup Force for Good Survey<br>
-                                Performed hypothesis testing on randomized survey responses to assess question framing impact.<br>
-                                <a href="#">project page</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td style="padding:8px;width:20%;vertical-align:middle">
-                                <img src="images/sat_scores.jpg" width="160">
-                            </td>
-                            <td style="padding:8px;width:80%;vertical-align:middle">
-                                <a href="#"><span class="papertitle">SAT Scores and Racial Composition Analysis</span></a><br>
-                                Conducted regression analysis on Massachusetts school data to examine demographic influences.<br>
-                                <a href="#">project page</a>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="js/app.js"></script>
+  </header>
+  <main>
+    <section>
+      <h1>Bahareh Zahirodini</h1>
+      <img src="images/profile.jpg" alt="Profile Photo" class="profile-img">
+      <p>Welcome to my personal academic website. I am a researcher specializing in [your field, e.g., data science, psychology]. Explore my publications, professional experience, and interactive data dashboards.</p>
+      <p><a href="data/BaharehZahirodini-CV.pdf" target="_blank">Download CV</a></p>
+    </section>
+  </main>
+  <footer>
+    <p>© 2025 Bahareh Zahirodini. All rights reserved.</p>
+  </footer>
+  <script src="js/app.js"></script>
 </body>
 </html>
