--- a/publications.html
+++ b/publications.html
@@ -80,7 +80,7 @@
                                 <img src="images/bayesian_analysis.jpg" width="160">
                             </td>
                             <td style="padding:8px;width:80%;vertical-align:middle">
-                                <a href="#"><span class="papertitle">Marking contemporary America's attitudinal stance towards modern businesses: a Bayesian attempt to detect deviation patterns based on demographics and politics</span></a><br>
+                                <a href="#"><span class="papertitle">Marking Contemporary America's Attitudinal Stance Towards Modern Businesses: a Bayesian Attempt to Detect Deviation Patterns Based on Demographics and Politics</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri<br>
                                 <em>Chance (American Statistical Association)</em>, Accepted<br>
                                 Bayesian Analysis of America's Business Attitudes<br>
@@ -92,7 +92,7 @@
                                 <img src="images/agreement_gambles.jpg" width="160">
                             </td>
                             <td style="padding:8px;width:80%;vertical-align:middle">
-                                <a href="#"><span class="papertitle">Are all bets off when it comes to agreement gambles?</span></a><br>
+                                <a href="#"><span class="papertitle">Are All Bets Off When It Comes to Agreement Gambles?</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri<br>
                                 <em>Significance (RSS)</em>, Under review<br>
                                 Analyzed decision-making under uncertainty using probabilistic models.<br>
@@ -104,7 +104,7 @@
                                 <img src="images/rasch_models.jpg" width="160">
                             </td>
                             <td style="padding:8px;width:80%;vertical-align:middle">
-                                <a href="#"><span class="papertitle">Does age correlate with one's ungauged opinion on modern business practices?</span></a><br>
+                                <a href="#"><span class="papertitle">Does Age Correlate with One's Ungauged Opinion on Modern Business Practices?</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri<br>
                                 <em>Significance (RSS)</em>, Under review<br>
                                 Applied Rasch model to uncover generational divides.<br>
@@ -116,7 +116,8 @@
                                 <img src="images/emotions.jpg" width="160">
                             </td>
                             <td style="padding:8px;width:80%;vertical-align:middle">
-                                <a href="#"><span class="papertitle">Shape of emotions from a community-based learning experience</span></a><br>
+                                <a href="#"><span class="papertitle">Shape of Emotions from a Community-based Learning Experience:
+                                    Functional Alignment, Summaries, and Structural Breaks</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri<br>
                                 <em>Chance (ASA)</em>, Under review<br>
                                 Applied sentiment analysis and clustering to essays.<br>
@@ -133,7 +134,8 @@
                                 <img src="images/torn_carpet.jpg" width="160">
                             </td>
                             <td style="padding:8px;width:80%;vertical-align:middle">
-                                <a href="https://nightingaledvs.com/the-stuff-we-cannot-sweep"><span class="papertitle">The Stuff We Cannot Sweep Under a Torn Carpet: : Perfectly Imperfect Tessellations From Slices of Maslows' Triangle</span></a><br>
+                                <a href="https://nightingaledvs.com/the-stuff-we-cannot-sweep"><span class="papertitle">The Stuff We Cannot Sweep Under a Torn Carpet:
+                                    Perfectly Imperfect Tessellations From Slices of Maslows' Triangle</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri<br>
                                 <em>Nightingale, Data Visualization Society</em><br>
                                 <a href="#">visualization</a>
@@ -144,7 +146,8 @@
                                 <img src="images/pyramids.jpg" width="160">
                             </td>
                             <td style="padding:8px;width:80%;vertical-align:middle">
-                                <a href="https://nightingaledvs.com/pyramids-of-priorities/"><span class="papertitle">Pyramids of Priorities and a Poisoned Omen: Differing Hierarchies of Desired Business Ethics</span></a><br>
+                                <a href="https://nightingaledvs.com/pyramids-of-priorities/"><span class="papertitle">Pyramids of Priorities and a Poisoned Omen: 
+                                    Differing Hierarchies of Desired Business Ethics</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri<br>
                                 <em>Nightingale, Data Visualization Society</em><br>
                                 <a href="#">visualization</a>
