--- a/dashboards.html
+++ b/dashboards.html
@@ -61,20 +61,19 @@
       <h1>Data Dashboards</h1>
       <p>Explore interactive data visualizations created using Tableau and R Shiny. These dashboards provide insights into various research and analytical projects.</p>
       
-      <h2>Tableau Dashboard: [Your Dashboard Title]</h2>
-      <p>[Brief description of the Tableau dashboard, e.g., "Visualizes consumer preferences data across multiple dimensions."]</p>
+      <h2>Tableau Dashboard: Gallup-Bentley Business Ethics Analysis</h2>
+      <p>This dashboard visualizes trends and patterns in business ethics data, based on Gallup-Bentley research, offering interactive insights into ethical decision-making.</p>
       <div class="tableau-embed">
-        <!-- Replace with your Tableau embed code -->
-        <div class='tableauPlaceholder' id='viz123456789' style='position: relative'>
-          <noscript><a href='#'><img alt='Dashboard' src='https://public.tableau.com/static/images/placeholder.jpg' style='border: none' /></a></noscript>
+        <div class='tableauPlaceholder' id='viz1746761380955' style='position: relative'>
+          <noscript><a href='#'><img alt='Gallup-Bentley Business Ethics Analysis  ' src='https://public.tableau.com/static/images/Ga/Gallup-Bentley/Gallup-BentleyBusinessEthicsAnalysis/1_rss.png' style='border: none' /></a></noscript>
           <object class='tableauViz' style='display:none;'>
             <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
             <param name='embed_code_version' value='3' />
             <param name='site_root' value='' />
-            <param name='name' value='YourDashboardName/YourDashboard' />
+            <param name='name' value='Gallup-Bentley/Gallup-BentleyBusinessEthicsAnalysis' />
             <param name='tabs' value='no' />
             <param name='toolbar' value='yes' />
-            <param name='static_image' value='https://public.tableau.com/static/images/placeholder.jpg' />
+            <param name='static_image' value='https://public.tableau.com/static/images/Ga/Gallup-Bentley/Gallup-BentleyBusinessEthicsAnalysis/1.png' />
             <param name='animate_transition' value='yes' />
             <param name='display_static_image' value='yes' />
             <param name='display_spinner' value='yes' />
@@ -84,9 +83,9 @@
           </object>
         </div>
         <script type='text/javascript'>
-          var divElement = document.getElementById('viz123456789');
+          var divElement = document.getElementById('viz1746761380955');
           var vizElement = divElement.getElementsByTagName('object')[0];
-          vizElement.style.width='100%';vizElement.style.height='627px';
+          vizElement.style.width='1016px';vizElement.style.height='791px';
           var scriptElement = document.createElement('script');
           scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
           vizElement.parentNode.insertBefore(scriptElement, vizElement);
@@ -102,7 +101,7 @@
     </section>
   </main>
   <footer>
-    <p>&copy; 2025 Bahareh Zahirodini. All rights reserved.</p>
+    <p>© 2025 Bahareh Zahirodini. All rights reserved.</p>
   </footer>
   <script src="js/app.js"></script>
 </body>
