--- a/experience.html
+++ b/experience.html
@@ -64,6 +64,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="publications.html">Publications</a></li>
+                    <li><a href="dashboards.html">Dashboards</a></li>
                     <li class="active"><a href="experience.html">Experience</a></li>
                 </ul>
             </div>
