--- a/publications.html
+++ b/publications.html
@@ -65,6 +65,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li class="active"><a href="publications.html">Publications</a></li>
                     <li><a href="experience.html">Experience</a></li>
+                    <li><a href="dashboards.html">Dashboards</a></li>
                 </ul>
             </div>
         </div>
