--- a/dashboards.html
+++ b/dashboards.html
@@ -40,69 +40,127 @@
         </script><!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bahareh Zahirodini - Dashboards</title>
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📊</text></svg>">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="publications.html">Publications</a></li>
-        <li><a href="experience.html">Experience</a></li>
-        <li><a href="dashboards.html" class="active">Dashboards</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section>
-      <h1>Data Dashboards</h1>
-      <p>Explore interactive data visualizations created using Tableau and R Shiny. These dashboards provide insights into various research and analytical projects.</p>
-      
-      <h2>Tableau Dashboard: Gallup-Bentley Business Ethics Analysis</h2>
-      <p>This dashboard visualizes trends and patterns in business ethics data, based on Gallup-Bentley research, offering interactive insights into ethical decision-making.</p>
-      <div class="tableau-embed">
-        <div class='tableauPlaceholder' id='viz1746761380955' style='position: relative'>
-          <noscript><a href='#'><img alt='Gallup-Bentley Business Ethics Analysis  ' src='https://public.tableau.com/static/images/Ga/Gallup-Bentley/Gallup-BentleyBusinessEthicsAnalysis/1_rss.png' style='border: none' /></a></noscript>
-          <object class='tableauViz' style='display:none;'>
-            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-            <param name='embed_code_version' value='3' />
-            <param name='site_root' value='' />
-            <param name='name' value='Gallup-Bentley/Gallup-BentleyBusinessEthicsAnalysis' />
-            <param name='tabs' value='no' />
-            <param name='toolbar' value='yes' />
-            <param name='static_image' value='https://public.tableau.com/static/images/Ga/Gallup-Bentley/Gallup-BentleyBusinessEthicsAnalysis/1.png' />
-            <param name='animate_transition' value='yes' />
-            <param name='display_static_image' value='yes' />
-            <param name='display_spinner' value='yes' />
-            <param name='display_overlay' value='yes' />
-            <param name='display_count' value='yes' />
-            <param name='language' value='en-US' />
-          </object>
-        </div>
-        <script type='text/javascript'>
-          var divElement = document.getElementById('viz1746761380955');
-          var vizElement = divElement.getElementsByTagName('object')[0];
-          vizElement.style.width='1016px';vizElement.style.height='791px';
-          var scriptElement = document.createElement('script');
-          scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-          vizElement.parentNode.insertBefore(scriptElement, vizElement);
-        </script>
-      </div>
+    <script src="https://cdn.sheetjs.com/xlsx-latest/xlsx.full.min.js"></script>
+    <script type="text/javascript">
+        var gk_isXlsx = false;
+        var gk_xlsxFileLookup = {};
+        var gk_fileData = {};
+        function filledCell(cell) {
+          return cell !== '' && cell != null;
+        }
+        function loadFileData(filename) {
+        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
+            try {
+                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
+                var firstSheetName = workbook.SheetNames[0];
+                var worksheet = workbook.Sheets[firstSheetName];
 
-      <h2>R Shiny Dashboard: [Your Dashboard Title]</h2>
-      <p>[Brief description of the R Shiny dashboard, e.g., "Interactive analysis of SAT scores with dynamic filters."]</p>
-      <div class="shiny-embed">
-        <!-- Replace with your Shiny app iframe -->
-        <iframe src="https://your-username.shinyapps.io/your-shiny-app/" width="100%" height="600px" frameborder="0"></iframe>
+                // Convert sheet to JSON to filter blank rows
+                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
+                // Filter out blank rows (rows where all cells are empty, null, or undefined)
+                var filteredData = jsonData.filter(row => row.some(filledCell));
+
+                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
+                var headerRowIndex = filteredData.findIndex((row, index) =>
+                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
+                );
+                // Fallback
+                if (headerRowIndex === -1 || headerRowIndex > 25) {
+                  headerRowIndex = 0;
+                }
+
+                // Convert filtered JSON back to CSV
+                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
+                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
+                return csv;
+            } catch (e) {
+                console.error(e);
+                return "";
+            }
+        }
+        return gk_fileData[filename] || "";
+        }
+        </script>
+  <nav class="navbar navbar-default">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="index.html">Bahareh Zahirodini</a>
       </div>
-    </section>
-  </main>
+      <div class="collapse navbar-collapse" id="navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="publications.html">Publications</a></li>
+          <li><a href="experience.html">Experience</a></li>
+          <li class="active"><a href="dashboards.html">Dashboards</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="container" id="main">
+    <div class="row">
+      <div class="col-md-12">
+        <h2>Data Dashboards</h2>
+        <p>Explore interactive data visualizations created using Tableau and R Shiny. These dashboards provide insights into various research and analytical projects.</p>
+        
+        <h3>Tableau Dashboard: Gallup-Bentley Business Ethics Analysis</h3>
+        <p>This dashboard visualizes trends and patterns in business ethics data, based on Gallup-Bentley research, offering interactive insights into ethical decision-making.</p>
+        <div class="tableau-embed">
+          <div class='tableauPlaceholder' id='viz1746761380955' style='position: relative'>
+            <noscript><a href='#'><img alt='Gallup-Bentley Business Ethics Analysis  ' src='https://public.tableau.com/static/images/Ga/Gallup-Bentley/Gallup-BentleyBusinessEthicsAnalysis/1_rss.png' style='border: none' /></a></noscript>
+            <object class='tableauViz' style='display:none;'>
+              <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+              <param name='embed_code_version' value='3' />
+              <param name='site_root' value='' />
+              <param name='name' value='Gallup-Bentley/Gallup-BentleyBusinessEthicsAnalysis' />
+              <param name='tabs' value='no' />
+              <param name='toolbar' value='yes' />
+              <param name='static_image' value='https://public.tableau.com/static/images/Ga/Gallup-Bentley/Gallup-BentleyBusinessEthicsAnalysis/1.png' />
+              <param name='animate_transition' value='yes' />
+              <param name='display_static_image' value='yes' />
+              <param name='display_spinner' value='yes' />
+              <param name='display_overlay' value='yes' />
+              <param name='display_count' value='yes' />
+              <param name='language' value='en-US' />
+            </object>
+          </div>
+          <script type='text/javascript'>
+            var divElement = document.getElementById('viz1746761380955');
+            var vizElement = divElement.getElementsByTagName('object')[0];
+            vizElement.style.width='1016px';vizElement.style.height='791px';
+            var scriptElement = document.createElement('script');
+            scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+            vizElement.parentNode.insertBefore(scriptElement, vizElement);
+          </script>
+        </div>
+
+        <h3>R Shiny Dashboard: Tessellations Visualization</h3>
+        <p>This interactive dashboard visualizes tessellations inspired by Maslow’s hierarchy of needs, exploring patterns in societal priorities and business ethics based on survey data.</p>
+        <div class="shiny-embed">
+          <iframe src="https://zahirodini.shinyapps.io/tessellations/" width="100%" height="600px" frameborder="0"></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
   <footer>
     <p>© 2025 Bahareh Zahirodini. All rights reserved.</p>
   </footer>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="js/app.js"></script>
-</body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'93ce91547a85453f',t:'MTc0Njc2NjEzOS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
