--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
                             </p>
                         </td>
                         <td style="padding:2.5%;width:37%;max-width:37%">
-                            <img style="width:100%;max-width:100%;object-fit:cover;border-radius:50%;" alt="profile photo" src="images/profile.jpg" class="hoverZoomLink">
+                            <img src="images/profile.jpg" alt="profile photo" style="width:100%;max-width:100%;object-fit:cover;border-radius:50%;" class="hoverZoomLink">
+
                         </td>
                     </tr>
                 </tbody>
