--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
                                 <a href="/cdn-cgi/l/email-protection#053f242d2c372a212c2b3c052228242c296b262a28">Email</a>  / 
                                 <a href="https://linkedin.com/in/bahareh-zahirodini/">LinkedIn</a>  / 
                                 <a href="data/BaharehZahirodini-CV.pdf">CV</a>  / 
-                                <a href="https://github.com/baharehzahirodini">GitHub</a>
+                                <a href="https://github.com/baharez">GitHub</a>
                             </p>
                         </td>
                         <td style="padding:2.5%;width:37%;max-width:37%">
-                            <img src="images/profile.jpg" alt="profile photo" style="width:100%;max-width:100%;object-fit:cover;border-radius:50%;" class="hoverZoomLink" loading="lazy" width="200" height="200">
+                            <img src="images/profile.JPG" alt="profile photo" style="width:100%;max-width:100%;object-fit:cover;border-radius:50%;" class="hoverZoomLink" loading="lazy" width="200" height="200">
 
                         </td>
                     </tr>
