--- a/publications.html
+++ b/publications.html
@@ -134,7 +134,7 @@
                             <td style="padding:8px;width:80%;vertical-align:middle">
                                 <a href="#"><span class="papertitle">Are All Bets Off When It Comes to Agreement Gambles?</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri<br>
-                                <em>Significance (RSS)</em>, Under review<br>
+                                <em>Significance (Royal Statistical Society)</em>, Under review<br>
                                 Analyzed decision-making under uncertainty using probabilistic models.<br>
                                 <a href="#">paper</a>
                             </td>
@@ -146,7 +146,7 @@
                             <td style="padding:8px;width:80%;vertical-align:middle">
                                 <a href="#"><span class="papertitle">Does Age Correlate with One's Ungauged Opinion on Modern Business Practices?</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri<br>
-                                <em>Significance (RSS)</em>, Under review<br>
+                                <em>Significance (Royal Statistical Society)</em>, Under review<br>
                                 Applied Rasch model to uncover generational divides.<br>
                                 <a href="#">paper</a>
                             </td>
@@ -159,7 +159,7 @@
                                 <a href="#"><span class="papertitle">Shape of Emotions from a Community-based Learning Experience:
                                     Functional Alignment, Summaries, and Structural Breaks</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri<br>
-                                <em>Chance (ASA)</em>, Under review<br>
+                                <em>Chance (American Statistical Association)</em>, Under review<br>
                                 Applied sentiment analysis and clustering to essays.<br>
                                 <a href="#">paper</a>
                             </td>
