--- a/publications.html
+++ b/publications.html
@@ -158,7 +158,7 @@
                             <td style="padding:8px;width:80%;vertical-align:middle">
                                 <a href="#"><span class="papertitle">Shape of Emotions from a Community-based Learning Experience:
                                     Functional Alignment, Summaries, and Structural Breaks</span></a><br>
-                                Bahareh Zahirodini, Moinak Bhaduri<br>
+                                Bahareh Zahirodini, Moinak Bhaduri, Curtis Smith<br>
                                 <em>Chance (American Statistical Association)</em>, Under review<br>
                                 Applied sentiment analysis and clustering to essays.<br>
                                 <a href="#">paper</a>
@@ -188,7 +188,7 @@
                             <td style="padding:8px;width:80%;vertical-align:middle">
                                 <a href="https://nightingaledvs.com/pyramids-of-priorities/"><span class="papertitle">Pyramids of Priorities and a Poisoned Omen: 
                                     Differing Hierarchies of Desired Business Ethics</span></a><br>
-                                Bahareh Zahirodini, Moinak Bhaduri<br>
+                                Bahareh Zahirodini, Moinak Bhaduri <br>
                                 <em>Nightingale, Data Visualization Society</em><br>
                                 <a href="#">visualization</a>
                             </td>
