--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                 <a href="#"><span class="papertitle">Exploring Consumer Preferences</span></a><br>
                                 Bentley-Gallup Force for Good Survey<br>
                                 Performed hypothesis testing on randomized survey responses to assess question framing impact.<br>
-                                <a href="projects/Gallup_Bentley.R" download>Download Sample R Script</a>
+                                <a href="https://github.com/baharez/Bentley-Gallup/blob/abaaa3a2e0d7e7453407afa8da4ae934fa502002/Gallup_Bentley%20Experiment.R"> R Script</a>
                             </td>
                         </tr>
                         <tr>
@@ -131,7 +131,7 @@
                             <td style="padding:8px;width:80%;vertical-align:middle">
                                 <a href="#"><span class="papertitle">SAT Scores and Racial Composition Analysis</span></a><br>
                                 Conducted regression analysis on Massachusetts high school data to examine demographic influences.<br>
-                                <a href="data/Mass Public High School SAT Score Report.pdf">project page</a>
+                                <a href="data/Mass Public High School SAT Score Report.pdf"> Report</a>
                             </td>
                         </tr>
                     </tbody>
