--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                 I am a data scientist and researcher with a Master’s in Business Analytics from Bentley University. My work focuses on Bayesian networks, sentiment analysis, and data visualization, exploring consumer preferences and societal trends.
                             </p>
                             <p style="text-align:center">
-                                <a href="/cdn-cgi/l/email-protection#053f242d2c372a212c2b3c052228242c296b262a28">Email</a>  / 
+                                <a href="mailto:zahirodiny@gmail.com">Email</a>  / 
                                 <a href="https://linkedin.com/in/bahareh-zahirodini/">LinkedIn</a>  / 
                                 <a href="data/BaharehZahirodini-CV.pdf">CV</a>  / 
                                 <a href="https://github.com/baharez">GitHub</a>
@@ -118,7 +118,7 @@
                                 <img src="images/consumer_preferences.jpg" width="160">
                             </td>
                             <td style="padding:8px;width:80%;vertical-align:middle">
-                                <a href="#"><span class="papertitle">Exploring Consumer Preferences</span></a><br>
+                                <span class="papertitle">Exploring Consumer Preferences</span></a><br>
                                 Bentley-Gallup Force for Good Survey<br>
                                 Performed hypothesis testing on randomized survey responses to assess question framing impact.<br>
                                 <a href="https://github.com/baharez/Bentley-Gallup/blob/abaaa3a2e0d7e7453407afa8da4ae934fa502002/Gallup_Bentley%20Experiment.R"> R Script</a>
@@ -129,7 +129,7 @@
                                 <img src="images/sat_scores.jpg" width="160">
                             </td>
                             <td style="padding:8px;width:80%;vertical-align:middle">
-                                <a href="#"><span class="papertitle">SAT Scores and Racial Composition Analysis</span></a><br>
+                                <span class="papertitle">SAT Scores and Racial Composition Analysis</span></a><br>
                                 Conducted regression analysis on Massachusetts high school data to examine demographic influences.<br>
                                 <a href="data/Mass Public High School SAT Score Report.pdf"> Report</a>
                             </td>
