--- a/experience.html
+++ b/experience.html
@@ -93,10 +93,20 @@
                         <li>Conducted Bayesian network analysis on a survey dataset with over 6,000 participants.</li>
                         <li>Applied e-value on cosine similarity to detect echo chamber effects.</li>
                         <li>Developed Partial Credit Model to estimate respondents’ attitudes.</li>
+                        <li>Delivered tutorials on data collection and financial modeling using tools like Bloomberg, </li>
+                            FactSet, and Federal Reserve databases in Bentley Summer School, Wall Street 101.</li>
                         <li>Performed clustering and outlier detection on sentiment score curves.</li>
                         <li>Designed Python scripts to automate investment research and time series analysis.</li>
                         <li>Created interactive dashboards using Tableau and R Shiny.</li>
                     </ul>
+                
+                </p>
+                <h2>Technical Skills</h2>
+                <p>
+                    <strong>Programming:</strong> Python, R, SQL, Excel (Macros, VBA), SAS<br>
+                    <strong>Data Visualization:</strong> Tableau, Power BI, R Shiny<br>
+                    <strong>Analytics:</strong> Bayesian Networks, Social Network Analysis, Time Series Analysis, Regression Analysis, Causal Inference, A/B Testing, Functional Data Analysis, NLP, Text Analysis, Data Mining<br>
+                    <strong>Tools:</strong> Git/GitHub, Alteryx, Snowflake, Microsoft Office
                 </p>
                 <h2>Academic Projects</h2>
                 <p>
@@ -107,14 +117,7 @@
                     <strong>Exploring Consumer Preferences</strong><br>
                     Performed hypothesis testing on Bentley-Gallup survey data.<br>
                     <strong>NABA x Bentley Business Bowl (2nd Place)</strong><br>
-                    Analyzed Responsible AI and corporate governance in credit lending.
-                </p>
-                <h2>Technical Skills</h2>
-                <p>
-                    <strong>Programming:</strong> Python, R, SQL, Excel (Macros, VBA)<br>
-                    <strong>Data Visualization:</strong> Tableau, Power BI, R Shiny<br>
-                    <strong>Analytics:</strong> Bayesian Networks, Social Network Analysis, Time Series Analysis, NLP<br>
-                    <strong>Tools:</strong> Alteryx, Snowflake, Microsoft Office
+                    Analyzed Responsible AI and corporate governance in credit lending.<br>
                 </p>
             </div>
         </div>
