--- a/experience.html
+++ b/experience.html
@@ -93,7 +93,7 @@
                         <li>Conducted Bayesian network analysis on a survey dataset with over 6,000 participants.</li>
                         <li>Applied e-value on cosine similarity to detect echo chamber effects.</li>
                         <li>Developed Partial Credit Model to estimate respondents’ attitudes.</li>
-                        <li>Delivered tutorials on data collection and financial modeling using tools like Bloomberg, </li>
+                        <li>Delivered tutorials on data collection and financial modeling using tools like Bloomberg, <br>
                             FactSet, and Federal Reserve databases in Bentley Summer School, Wall Street 101.</li>
                         <li>Performed clustering and outlier detection on sentiment score curves.</li>
                         <li>Designed Python scripts to automate investment research and time series analysis.</li>
