--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                 <name>Bahareh Zahirodini</name>
                             </p>
                             <p>
-                                I am a data scientist and researcher with a Master’s in Business Analytics from Bentley University. My work focuses on Bayesian networks, sentiment analysis, and data visualization, exploring consumer preferences and societal trends.
+                            I am a data scientist and researcher with a Master’s in Business Analytics from Bentley University, passionate about using computational methods to explore social phenomena. My expertise spans Bayesian networks, sentiment analysis, and data visualization, which I apply to study consumer attitudes toward businesses’ Corporate Social Responsibility (CSR) activities. In a recent project, I analyzed Gallup survey data using Bayesian methods to profile American attitudes toward modern business practices across demographics and political affiliations, as published in Chance. I also leveraged interactive visualizations in a Nightingale piece to reveal patterns in consumer perceptions of sustainability, making complex insights accessible. Currently, I am investigating psychological gaps in survey responses across demographics using the Rasch model and outlier detection in functional data, aligning with my goal to advance human-centric computational research.
                             </p>
                             <p style="text-align:center">
                                 <a href="mailto:zahirodiny@gmail.com">Email</a>  / 
@@ -99,11 +99,13 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <h2>News</h2>
+                <h2>Updates</h2>
                 <ul>
+                    <li><b>Apr 2025</b>: Submitted papers to <i>Significance (RSS)</i> on decision-making and Rasch models.</li>
+                    <li><b>Mar 2025</b>: Publication accepted in <i>Chance (ASA)</i>: "Bayesian Analysis of America's Business Attitudes."</li>
+                    <li><b>Feb 2025</b>: Publication under review by <i> Chance</i> "Shape of Emotions from a Community-Based Learning Experience at the U.S.–Mexico Border.r".</li>
+                    <li><b>Jun 2024</b>: Published in <i>Nigthingle (Data Visualization Society)</i>"Differing Hierarchies of Desired Business Ethics"</li>
                     <li><b>May 2024</b>: Graduated with M.S. in Business Analytics from Bentley University (GPA: 3.94).</li>
-                    <li><b>Apr 2024</b>: Publication accepted in <i>Chance (ASA)</i>: "Bayesian Analysis of America's Business Attitudes."</li>
-                    <li><b>Mar 2024</b>: Submitted papers to <i>Significance (RSS)</i> on decision-making and Rasch models.</li>
                     <li><b>Feb 2024</b>: Won 2nd place in NABA x Bentley Business Bowl for Responsible AI case study.</li>
                 </ul>
             </div>
