--- a/publications.html
+++ b/publications.html
@@ -178,6 +178,7 @@
                                     Perfectly Imperfect Tessellations From Slices of Maslows' Triangle</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri<br>
                                 <em>Nightingale, Data Visualization Society</em><br>
+                                Visualized emergent patterns, showing how subtle differences can lead to divergent outcomes over time.</em><br>
                                 <a href="https://nightingaledvs.com/the-stuff-we-cannot-sweep">Read Here</a>
                             </td>
                         </tr>
