--- a/experience.html
+++ b/experience.html
@@ -105,7 +105,7 @@
                     Hezardastan IT Group, Tehran, Iran | March 2020 – May 2022<br>
                     <ul>
                         <li>Partnered with sales and product team on value chain analysis and overhaul of service delivery, reducing costs by 30% and customer churn by 5%; applied Monte Carlo simulation to optimize service dispatch, increasing capacity utilization by 25%.</li>
-                        <li>DResearched investment and expansion opportunities using Cost-Benefit Analysis and Economic Value Added to inform strategic business model decisions.</li>
+                        <li>Researched investment and expansion opportunities using Cost-Benefit Analysis and Economic Value Added to inform strategic business model decisions.</li>
                         <li>Led data migration and unified multiple databases, reducing reporting time from 2 days to real-time.</li>
                     </ul>
                 </p>
