--- a/publications.html
+++ b/publications.html
@@ -123,7 +123,7 @@
                                 <span class="papertitle">Marking Contemporary America's Attitudinal Stance Towards Modern Businesses: a Bayesian Attempt to Detect Deviation Patterns Based on Demographics and Politics</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri<br>
                                 <em>Chance (American Statistical Association)</em>, Accepted<br>
-                                Bayesian Analysis of America's Business Attitudes<br>
+                                BAnalyzed over 5,000 Gallup-Bentley survey responses to explore how Americans’ views on business ethics shift across demographic and political lines. Using Bayesian inference and latent space modeling, estimated the probability that large segments of the population support certain ethical practices, uncovering gaps between ideals and perceptions.<br>
                                 <a href="#">Paper</a>
                             </td>
                         </tr>
@@ -156,8 +156,8 @@
                                 <img src="images/emotions.jpg" width="160">
                             </td>
                             <td style="padding:8px;width:80%;vertical-align:middle">
-                                <span class="papertitle">Shape of Emotions from a Community-based Learning Experience:
-                                    Functional Alignment, Summaries, and Structural Breaks</span></a><br>
+                                <span class="papertitle">Shape of Emotions From a Community-Based Learning
+                                    Experience at the US-Mexico Border: Functional Alignment, Summaries, and Structural Breaks</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri, Curtis Smith<br>
                                 <em>Chance (American Statistical Association)</em>, Under review<br>
                                 Applied sentiment analysis and clustering to essays.<br>
@@ -191,7 +191,8 @@
                                     Differing Hierarchies of Desired Business Ethics</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri <br>
                                 <em>Nightingale, Data Visualization Society</em><br>
-                                <a href="https://nightingaledvs.com/pyramids-of-priorities/">Read Here</a>
+                                <a href="https://nightingaledvs.com/pyramids-of-priorities/">Read the full article</a>
+                                <a href="dashboards.html">Explore the dashboard</a>
                             </td>
                         </tr>
                     </tbody>
