--- a/publications.html
+++ b/publications.html
@@ -123,8 +123,19 @@
                                 <span class="papertitle">Marking Contemporary America's Attitudinal Stance Towards Modern Businesses: a Bayesian Attempt to Detect Deviation Patterns Based on Demographics and Politics</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri<br>
                                 <em>Chance (American Statistical Association)</em>, Accepted<br>
-                                BAnalyzed over 5,000 Gallup-Bentley survey responses to explore how Americans’ views on business ethics shift across demographic and political lines. Using Bayesian inference and latent space modeling, estimated the probability that large segments of the population support certain ethical practices, uncovering gaps between ideals and perceptions.<br>
+                                Analyzed over 5,000 Gallup-Bentley survey responses to explore how Americans’ views on business ethics shift across demographic and political lines. Using Bayesian inference and latent space modeling, estimated the probability that large segments of the population support certain ethical practices, uncovering gaps between ideals and perceptions.<br>
                                 <a href="#">Paper</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="padding:8px;width:20%;vertical-align:middle">
+                                <img src="images/rasch_models.jpg" width="160">
+                            </td>
+                            <td style="padding:8px;width:80%;vertical-align:middle">
+                                <span class="papertitle">Does Age Correlate with One's Ungauged Opinion on Modern Business Practices?</span></a><br>
+                                Bahareh Zahirodini, Moinak Bhaduri<br>
+                                <em>Significance (Royal Statistical Society)</em>, Under review<br>
+                                Applied the Partial Credit Model from Rasch modeling (item response theory) to detect differential threshold structures in Likert-scale responses across age subgroups. This approach was used to move beyond observed responses and quantify the psychological distance between adjacent response categories.<br>
                             </td>
                         </tr>
                         <tr>
@@ -141,26 +152,14 @@
                         </tr>
                         <tr>
                             <td style="padding:8px;width:20%;vertical-align:middle">
-                                <img src="images/rasch_models.jpg" width="160">
-                            </td>
-                            <td style="padding:8px;width:80%;vertical-align:middle">
-                                <span class="papertitle">Does Age Correlate with One's Ungauged Opinion on Modern Business Practices?</span></a><br>
-                                Bahareh Zahirodini, Moinak Bhaduri<br>
-                                <em>Significance (Royal Statistical Society)</em>, Under review<br>
-                                Applied Rasch model to uncover generational divides.<br>
-                                
-                            </td>
-                        </tr>
-                        <tr>
-                            <td style="padding:8px;width:20%;vertical-align:middle">
                                 <img src="images/emotions.jpg" width="160">
                             </td>
                             <td style="padding:8px;width:80%;vertical-align:middle">
                                 <span class="papertitle">Shape of Emotions From a Community-Based Learning
-                                    Experience at the US-Mexico Border: Functional Alignment, Summaries, and Structural Breaks</span></a><br>
+                                Experience at the US-Mexico Border: Functional Alignment, Summaries, and Structural Breaks</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri, Curtis Smith<br>
                                 <em>Chance (American Statistical Association)</em>, Under review<br>
-                                Applied sentiment analysis and clustering to essays.<br>
+                                Performed functional data analysis and curve alignment to examine emotional trajectories in written reflections from a community-based learning trip to the US-Mexico border. Sentiment was quantified, then analyzed through amplitude and phase variations to detect clusters and structural breaks.<br>
                                 
                             </td>
                         </tr>
@@ -191,8 +190,8 @@
                                     Differing Hierarchies of Desired Business Ethics</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri <br>
                                 <em>Nightingale, Data Visualization Society</em><br>
-                                <a href="https://nightingaledvs.com/pyramids-of-priorities/">Read the full article</a>
-                                <a href="dashboards.html">Explore the dashboard</a>
+                                <a href="https://nightingaledvs.com/pyramids-of-priorities/"><i class="fa fa-link"></i>Read the full article</a>
+                                <a href="dashboards.html"> <i class="fa fa-bar-chart"></i>Explore the dashboard</a>
                             </td>
                         </tr>
                     </tbody>
