--- a/publications.html
+++ b/publications.html
@@ -159,7 +159,7 @@
                                 Experience at the US-Mexico Border: Functional Alignment, Summaries, and Structural Breaks</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri, Curtis Smith<br>
                                 <em>Chance (American Statistical Association)</em>, Under review<br>
-                                Performed functional data analysis and curve alignment to examine emotional trajectories in written reflections from a community-based learning trip to the US-Mexico border. Sentiment was quantified, then analyzed through amplitude and phase variations to detect clusters and structural breaks.<br>
+                                <li>Performed functional data analysis and curve alignment to examine emotional trajectories in written reflections from a community-based learning trip to the US-Mexico border. Sentiment was quantified, then analyzed through amplitude and phase variations to detect clusters and structural breaks.<br>
                                 
                             </td>
                         </tr>
@@ -190,8 +190,8 @@
                                     Differing Hierarchies of Desired Business Ethics</span></a><br>
                                 Bahareh Zahirodini, Moinak Bhaduri <br>
                                 <em>Nightingale, Data Visualization Society</em><br>
-                                <a href="https://nightingaledvs.com/pyramids-of-priorities/"><i class="fa fa-link"></i>Read the full article</a>
-                                <a href="dashboards.html"> <i class="fa fa-bar-chart"></i>Explore the dashboard</a>
+                                <a href="https://nightingaledvs.com/pyramids-of-priorities/"><i class="fa fa-link"></i> Read Here </a>
+                                <a href="dashboards.html"> <i class="fa fa-bar-chart"></i> Explore Dashboard</a>
                             </td>
                         </tr>
                     </tbody>
